--- a/spring-consumer-cassandra/src/main/resources/application.yml
+++ b/spring-consumer-cassandra/src/main/resources/application.yml
@@ -10,7 +10,7 @@ kafka:
 cassandra:
   contactPoints: localhost
   port: 9042
-  keyspace: voting
+  keyspace: messaging
   username:
   password:
   replicationStrategy: SimpleStrategy
