--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.5.4.RELEASE'
+        springBootVersion = '2.0.1.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -14,22 +14,27 @@ subprojects {
 
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+
+    group = 'com'
+    version = '0.0.1-SNAPSHOT'
+    sourceCompatibility = 1.8
 
     repositories {
         mavenCentral()
-        jcenter()
-        maven {
-            url 'https://repo.spring.io/libs-snapshot'
-        }
     }
-
     dependencies {
-        compile ('org.apache.kafka:kafka-clients:0.10.2.0')
-        compile ('org.springframework.kafka:spring-kafka:1.2.2.RELEASE')
+        compile group: 'org.springframework.data', name: 'spring-data-cassandra', version: '2.0.6.RELEASE'
+        compile ('org.springframework.kafka:spring-kafka:2.0.4.RELEASE')
         compile ('org.springframework.boot:spring-boot-starter-web')
-        compile ('com.google.guava:guava:19.0')
         testCompile ('org.springframework.boot:spring-boot-starter-test')
-        testCompile ('org.springframework.kafka:spring-kafka-test:1.2.2.RELEASE')
+        testCompile group: 'org.cassandraunit', name: 'cassandra-unit', version: '2.1.9.2'
+        compile group: 'org.cassandraunit', name: 'cassandra-unit-shaded', version: '2.1.9.2'
+
+
+
+
     }
 
 }
